// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SeeDetailCheckitem /> render() should render correctly 1`] = `
<div>
  <WithStyles(Component)
    fullWidth={true}
    maxWidth="sm"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(CloseButton)
      onClick={[Function]}
    />
    <WithStyles(UGDialogTitle)>
      <WithStyles(Title)
        fullWidth={true}
        heading={
          <WithStyles(GridContainer)
            direction="column"
            spacing={0}
          >
            <WithStyles(GridItem)>
              <span>
                Task
              </span>
            </WithStyles(GridItem)>
            <WithStyles(Hr)
              half={true}
              noMarginTop={true}
            />
            <WithStyles(GridItem)>
              <span>
                in 
                <WithStyles(Connect(WithSimplifyResaga(Type)))
                  id={0}
                />
                 
                <strong>
                  <WithStyles(Connect(WithSimplifyResaga(Content)))
                    id={0}
                    variant="textOnly"
                  />
                </strong>
              </span>
            </WithStyles(GridItem)>
          </WithStyles(GridContainer)>
        }
        headingBackground="Task"
      />
    </WithStyles(UGDialogTitle)>
    <WithStyles(UGDialogContent)>
      <WithStyles(GridContainer)
        direction="column"
        spacing={0}
      >
        <WithStyles(GridItem)
          xs={true}
        >
          <WithStyles(Connect(WithSimplifyResaga(Content)))
            editable={false}
            id={9922}
            multiline={true}
            textAlign="center"
            variant="title"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Description)))))
            id={9922}
            useEditableRTE={true}
            variant="readOnly"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <WithStyles(Connect(WithSimplifyResaga(Notes)))
            id={9922}
            variant="readOnly"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem) />
      </WithStyles(GridContainer)>
    </WithStyles(UGDialogContent)>
  </WithStyles(Component)>
</div>
`;

exports[`<SeeDetailCheckitem /> render() should render correctly if user has permission 1`] = `
<div>
  <WithStyles(Component)
    fullWidth={true}
    maxWidth="sm"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(CloseButton)
      onClick={[Function]}
    />
    <WithStyles(UGDialogTitle)>
      <WithStyles(Title)
        fullWidth={true}
        heading={
          <WithStyles(GridContainer)
            direction="column"
            spacing={0}
          >
            <WithStyles(GridItem)>
              <span>
                Task
              </span>
            </WithStyles(GridItem)>
            <WithStyles(Hr)
              half={true}
              noMarginTop={true}
            />
            <WithStyles(GridItem)>
              <span>
                in 
                <WithStyles(Connect(WithSimplifyResaga(Type)))
                  id={0}
                />
                 
                <strong>
                  <WithStyles(Connect(WithSimplifyResaga(Content)))
                    id={0}
                    variant="textOnly"
                  />
                </strong>
              </span>
            </WithStyles(GridItem)>
          </WithStyles(GridContainer)>
        }
        headingBackground="Task"
      />
    </WithStyles(UGDialogTitle)>
    <WithStyles(UGDialogContent)>
      <WithStyles(GridContainer)
        direction="column"
        spacing={0}
      >
        <WithStyles(GridItem)>
          <WithStyles(Connect(WithSimplifyResaga(Status)))
            id={9922}
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)
          xs={true}
        >
          <WithStyles(Connect(WithSimplifyResaga(Content)))
            editable={true}
            id={9922}
            multiline={true}
            textAlign="center"
            variant="title"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Description)))))
            id={9922}
            useEditableRTE={true}
            variant="default"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <WithStyles(Connect(WithSimplifyResaga(Notes)))
            id={9922}
            variant="default"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <div>
            <WithStyles(Hr)
              noMarginTop={true}
            />
            <WithStyles(Connect(WithSimplifyResaga(Status)))
              id={9922}
              variant="summary"
            />
          </div>
        </WithStyles(GridItem)>
      </WithStyles(GridContainer)>
    </WithStyles(UGDialogContent)>
  </WithStyles(Component)>
</div>
`;
